Fix footnote word spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -708,8 +708,7 @@ select {
 }
 
 .processStep {
-  display: inline-flex;
-  align-items: center;
+  display: inline-block;
   white-space: nowrap;
 }
 
